--- a/src/assets/styles/layout/pages.scss
+++ b/src/assets/styles/layout/pages.scss
@@ -1,5 +1,20 @@
 .index-page{
   @include resp(padding, (24, 0), (27, 0), (73, 0));
+  flex: 1;
+  @include media($tablet){
+    max-height: none;
+  }
+
+  @include media(){
+    max-height: calc(100vh - #{vw(90)});
+    .container{
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+  }
+
+
   h2{
     @include resp(font-size, 24, 35, 35);
     @include resp(letter-spacing, 3, 3, 3);
