--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -6,5 +6,32 @@
   width: auto;
   @include media(tablet){
     flex-direction: row;
+    .gallery-main{
+      @include resp(padding, (8, 0), (6, 0), (18, 0));
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+  @include media(){
+    overflow: hidden;
+    .gallery-main{
+      margin-bottom: vw(-35);
+      overflow: auto;
+      height: calc(200px * 3);
+      @include media(){
+        &::-webkit-scrollbar {
+          width: vw(5);
+        }
+
+        &::-webkit-scrollbar-track {
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: $color-third;
+        }
+      }
+    }
   }
 }
