--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import "./components/ui/ui";
 @import "./components/cards/cards";
 @import "./components/header/header";
+@import "./components/footer/footer";
 @import "./components/navigation/navigation";
 @import "./components/find/find";
 @import "./components/filter/filter";
