added mobile menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "./components/cards/cards";
 @import "./components/header/header";
 @import "./components/footer/footer";
+@import "./components/modal/modal";
 @import "./components/navigation/navigation";
 @import "./components/find/find";
 @import "./components/filter/filter";
