--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -19,6 +19,28 @@
       }
     }
   }
+  &.open{
+    @media(max-width: $tablet){
+      .navigation-icon{
+        height: 0;
+        &:before,
+        &:after{
+          top: 0;
+        }
+        &:before{
+          transform: rotate(45deg);
+        }
+        &:after{
+          transform: rotate(-45deg);
+        }
+      }
+      .navigation-list{
+        transform: translateY(0);
+        transition: all .35s;
+
+      }
+    }
+  }
   .navigation-icon{
     width: 100%;
     height: 5px;
@@ -30,6 +52,7 @@
     left: 0;
     right: 0;
     margin: auto;
+    z-index: 1;
     &:before,
     &:after{
       content: '';
@@ -40,6 +63,7 @@
       position: absolute;
       left: 0;
       right: 0;
+      transition: all .25s;
     }
     &:before{
       bottom: vwm(8.5);
@@ -52,15 +76,39 @@
     }
   }
   .navigation-list{
-    display: none;
+    display: flex;
+    transform: translateY(-100%);
+    position: fixed;
     a{
-      @include resp(font-size, none, 19, 25);
+      @include resp(font-size, 27, 19, 25);
+      @include resp(margin-bottom, 16, none, none);
+      text-align: center;
+
+    }
+    @media (max-width: $tablet) {
+      padding: vwm(124) 0 vwm(24);
+      background: linear-gradient(180deg, $color-third 0%, $color-primary 100%);
+      box-shadow: 4px 4px 24px rgba(1, 17, 38, 0.2);
+      border-radius: 0 0 16px 16px;
+      display: flex;
+      flex-direction: column;
+      left: 0;
+      right: 0;
+      flex-wrap: wrap;
+      top: 0;
+      width: 100%;
     }
     @include media(tablet){
       display: flex;
       justify-content: space-between;
+      position: relative;
       flex: 1;
+      transform: translateY(0);
       @include resp(padding-left, none, 60, 60);
+      flex-direction: row;
+      a{
+        margin: 0;
+      }
     }
   }
 }
