added page navigate

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,4 @@
 @import "./components/find/find";
 @import "./components/filter/filter";
 @import "./components/gallery/gallery";
+@import "./components/pagination/pagination";
