--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -126,9 +126,15 @@
     &[data-color="rock"] {
       background: linear-gradient(270deg, #470100 0.15%, #878B77 100%);
     }
+    &[data-color="ice"] {
+      background: linear-gradient(270deg, #8dcbf9 0.15%, #40b5ce 100%);
+    }
+    &[data-color="ghost"] {
+      background: linear-gradient(270deg, $black 0.15%, $white 100%);
+    }
 
     &[data-color="normal"] {
-      background: linear-gradient(270deg, $color-pharagraph 0.15%, $black 100%);
+      background: linear-gradient(270deg, #666666 0.15%, #2b2b2b 100%);
     }
     .card-picture-item {
       height: 100%;
