--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -93,48 +93,51 @@
     width: 62%;
     transition: all .35s .1s;
     &[data-color="fire"] {
-      background: linear-gradient(270deg, #B33327 0.15%, #D93E30 100%);
+      background: linear-gradient(270deg, #B33327 0.15%, $white 100%);
     }
     &[data-color="water"],
     &[data-color="poison"] {
-      background: linear-gradient(270deg, #5BC7FA 0.15%, #35BAFF 100%);
+      background: linear-gradient(270deg, #5BC7FA 0.15%, $white 100%);
     }
 
     &[data-color="grass"] {
-      background: linear-gradient(270deg, #64D368 0.15%, #64D368 70.88%);
+      background: linear-gradient(270deg, #64D368 0.15%, $white 70.88%);
     }
     &[data-color="psychic"],
     &[data-color="electric"] {
-      background: linear-gradient(270deg, #F2CB07 0.15%, #F2B807 100%);
+      background: linear-gradient(270deg, #F2CB07 0.15%, $white 100%);
     }
     &[data-color="fairy"],
     &[data-color="fluing"] {
-      background: linear-gradient(270deg, #F89EAE 0.15%, #F4B5C1 100%);
+      background: linear-gradient(270deg, #F89EAE 0.15%, $white 100%);
     }
     &[data-color="bug"] {
-      background: linear-gradient(270deg, $color-primary 0.15%, $color-second 100%);
+      background: linear-gradient(270deg, $color-primary 0.15%, $white 100%);
     }
     &[data-color="ground"] {
-      background: linear-gradient(270deg, $color-third 0.15%, $color-second 100%);
+      background: linear-gradient(270deg, $color-third 0.15%, $white 100%);
 
     }
     &[data-color="dark"],
     &[data-color="fighting"] {
-      background: linear-gradient(270deg, #BF975F 0.15%, #F2EC9B 100%);
+      background: linear-gradient(270deg, #BF975F 0.15%, $white 100%);
     }
 
     &[data-color="rock"] {
-      background: linear-gradient(270deg, #470100 0.15%, #878B77 100%);
+      background: linear-gradient(270deg, #470100 0.15%, $white 100%);
     }
     &[data-color="ice"] {
-      background: linear-gradient(270deg, #8dcbf9 0.15%, #40b5ce 100%);
+      background: linear-gradient(270deg, #8dcbf9 0.15%, $white 100%);
     }
     &[data-color="ghost"] {
       background: linear-gradient(270deg, $black 0.15%, $white 100%);
     }
 
     &[data-color="normal"] {
-      background: linear-gradient(270deg, #666666 0.15%, #2b2b2b 100%);
+      background: linear-gradient(270deg, #666666 0.15%, $white 100%);
+    }
+    &[data-color="dragon"] {
+      background: linear-gradient(270deg, #8dcbf9 0.15%, $white 100%);
     }
     .card-picture-item {
       height: 100%;
