--- a/src/assets/styles/layout/pages.scss
+++ b/src/assets/styles/layout/pages.scss
@@ -1,26 +1,28 @@
 .index-page{
-  @include resp(padding, (24, 0), (27, 0), (20, 0));
+  @include resp(padding, (24, 0), (27, 0), (30, 0));
+  display: flex;
+  align-items: stretch;
   flex: 1;
   @include media($tablet){
     max-height: none;
   }
 
-  @include media(){
-    .container{
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-    }
+  .index-main{
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100%;
   }
-
-
   h2{
     @include resp(font-size, 24, 35, 35);
     @include resp(letter-spacing, 3, 3, 3);
+    @include resp(margin-bottom, 0, 0, 34);
     text-align: center;
     line-height: 1.16;
     font-family: $font;
     max-width: 95%;
-    margin: auto;
+    margin: 0 auto;
   }
 }
