--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,23 +1,24 @@
 .gallery{
-  @include resp(margin, (0, 0), (0, -10), (0, -16));
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   width: auto;
+  flex: 1;
   .gallery-main{
-    @include resp(padding, (8, 0), (6, 0), (18, 0));
-  }
-  @include media(tablet){
+    @include resp(padding, (8, 0), (6, 0), (26, 0, 20));
+    @include resp(margin, (0, 0), (0, -10), (0, -16));
+    flex: 1;
+    display: flex;
     flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  @include media(tablet){
     .gallery-main{
-      width: 100%;
       display: flex;
-      flex-wrap: wrap;
+
     }
   }
-  @include media(){
-    .gallery-main{
-      margin-bottom: vw(-15);
-    }
-  }
+
 }
