--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -10,4 +10,214 @@
   &.open{
     display: block;
   }
+  .modal-main{
+    border-radius: 16px;
+    width: 100vw;
+    max-height: 100vh;
+    position: fixed;
+    z-index: 11;
+    overflow-y: auto;
+    .modal-close{
+      @include resp(width, 32, 32, 32);
+      @include resp(height, 32, 32, 32);
+      @include resp(right, 15, 15, 15);
+      @include resp(top, 15, 15, 15);
+      font-size: 0;
+      position: absolute;
+      &:before,
+      &:after{
+        content: '';
+        @include resp(width, 35, 35, 35);
+        @include resp(height, 9, 9, 9);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        background: $black;
+        border-radius: 3px;
+      }
+      &:before{
+        transform: rotate(-45deg);
+      }
+      &:after{
+        transform: rotate(45deg);
+      }
+    }
+    .modal-image{
+      @include resp(padding, (50, 30), (32, 9), (38, 10));
+      .modal-name{
+        @include resp(font-size, 36, 24, 36);
+        @include resp(margin-bottom, 10, 5, 10);
+        color: $white;
+        font-weight: bold;
+        text-shadow: 4px 4px 4px rgba(33, 33, 33, .1);
+        text-align: center;
+        &:first-letter{
+          text-transform: uppercase;
+        }
+      }
+    }
+    .modal-info{
+      @include resp(padding, (25, 12, 30), (26, 16, 21), (25, 20));
+      @include resp(margin-top, -150, none, none);
+      border-radius: 16px;
+      background: linear-gradient(180deg, rgba($black, .7) 0.5%, rgba($white, 0) 100%);
+      .modal-buttons{
+        display: flex;
+        justify-content: flex-end;
+        @include resp(padding, (0, 10), (0, 10), (0, 10));
+        @include resp(margin-bottom, 15, 15, 15);
+        .btn{
+          @include resp(margin-left, 16, none, none);
+        }
+      }
+      .modal-health{
+        @include resp(padding, (14, 20, 27), (15, 15, 6), (18, 19, 7));
+        @include resp(font-size, 16, 16, 16);
+        @include resp(margin-bottom, 20, 20, 20);
+        background: $white;
+        border-radius: 16px;
+        .item{
+          @include resp(margin-bottom, 4, 4, 4);
+          font-weight: 400;
+          width: 50%;
+          display: inline-block;
+          span{
+            font-weight: 700;
+          }
+        }
+      }
+      .modal-stats{
+        display: flex;
+        justify-content: space-between;
+        .item{
+          @include resp(padding, 8, 8, 8);
+          width: calc(100% / 4 - 7px);
+          background: $white;
+          border-radius: 16px;
+          .round{
+
+            @include resp(border-width, 3, 3, 3);
+            background: #fff;
+            width: 42%;
+            padding-bottom: calc(42%);
+            box-sizing: content-box;
+            position: relative;
+            font-weight: 400;
+            color: $color-pharagraph;
+            text-align: center;
+            font-family: $font;
+            border-radius: 50%;
+            border-style: solid;
+            border-color: $color-pharagraph;
+            margin: auto;
+            @include resp(margin-bottom, 10,  10, 10);
+            span {
+              position: absolute;
+              top: 50%;
+              left: 0;
+              right: 0;
+              @include resp(font-size, 18, 18, 18);
+              font-weight: 400;
+              transform: translateY(-50%);
+            }
+          }
+          span{
+            @include resp(font-size, 11, 11, 11);
+            display: block;
+            text-align: center;
+            color: #4b4b4b;
+          }
+        }
+      }
+    }
+    &[data-color="fire"] {
+      background: #B33327;
+    }
+    &[data-color="water"],
+    &[data-color="poison"] {
+      background: #5BC7FA;
+    }
+    &[data-color="grass"] {
+      background: #64D368;
+    }
+    &[data-color="psychic"],
+    &[data-color="electric"] {
+      background: #F2CB07;
+    }
+    &[data-color="fairy"],
+    &[data-color="fluing"] {
+      background: #F89EAE;
+    }
+    &[data-color="bug"] {
+      background: $color-primary;
+    }
+    &[data-color="ground"] {
+      background: $color-third;
+
+    }
+    &[data-color="dark"],
+    &[data-color="fighting"] {
+      background: #BF975F;
+    }
+    &[data-color="rock"] {
+      background: #470100;
+    }
+    &[data-color="ice"] {
+      background: #8dcbf9;
+    }
+    &[data-color="ghost"] {
+      background: $black;
+    }
+    &[data-color="normal"] {
+      background: #666666;
+    }
+    &[data-color="dragon"] {
+      background: #8dcbf9;
+    }
+    @include media(tablet){
+      flex-direction: row;
+      width: 86%;
+      margin: auto;
+      min-width: 670px;
+      top: 50%;
+      left: 0;
+      right: 0;
+      transform: translateY(-50%);
+      display: flex;
+      .modal-image{
+        width: 45%;
+      }
+      .modal-info{
+        width: 65%;
+        margin: 0;
+        border-radius: 0;
+        .modal-buttons{
+          justify-content: flex-start;
+          padding: 0;
+          .btn{
+            @include resp(margin-right, none,16,16);
+            margin-left: 0;
+          }
+        }
+      }
+    }
+    @include media(){
+      width: 800px;
+      .modal-image{
+        width: 45%;
+      }
+      .modal-info{
+        width: 65%;
+        margin: 0;
+        .modal-stats{
+          .item{
+            width: calc(100% / 4 - 21px);
+          }
+        }
+      }
+    }
+  }
 }
