--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,9 +1,10 @@
 .pagination{
   display: flex;
+  justify-content: space-between;
   li{
     @include resp(border-radius, 40, 40, 40);
     background: #f2f2f2;
-    @include resp(margin, (0, 5), (0, 5), (0, 5));
+    @include resp(margin, 0, (0, 5), (0, 5));
     box-shadow: 2px 2px 2px rgba(33, 33, 33, 0.1);
     display: inline-flex;
     a{
@@ -38,10 +39,12 @@
     &.disabled{
       display: none;
     }
-    @include media(tablet){
+
+  }
+  @include media(tablet){
+    justify-content: flex-start;
+    li{
       display: inline-flex;
     }
-
-
   }
 }
