--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -13,7 +13,7 @@
   .modal-main{
     border-radius: 16px;
     width: 100vw;
-    max-height: 100vh;
+    height: 100vh;
     position: fixed;
     z-index: 11;
     overflow-y: auto;
