added styles for preloader

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import "./assets/styles/utils/main";
+@import "./assets/styles/utils/keyframes";
 @import "./assets/styles/layout/main";
 
 /* Components */
